<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:title="@string/profile" />
    </group>

    <item android:title="@string/system">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_sign_out"
                android:title="@string/sign_out" />
            <item
                android:id="@+id/nav_about"
                android:title="@string/about" />
        </menu>
    </item>

</menu>
