<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:id="@+id/splashLogo"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:contentDescription="@string/snitch_logo"
        android:src="@mipmap/ic_splash"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/splashWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/welcome_to_snitch"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashLogo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="7dp"
        android:fontFamily="@font/crimson_text_italic"
        android:text="@string/i_mma_snitch_for_you"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashWelcome" />

    <Button
        android:id="@+id/signInButton"
        android:layout_width="117dp"
        android:layout_height="33dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/bg_button_solid_primary_dark"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="117dp"
        android:layout_height="33dp"
        android:layout_marginStart="14dp"
        android:layout_marginBottom="7dp"
        android:background="@drawable/bg_button_outline_primary_dark"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>