<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button_solid_white">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_set_up_a_password_and_a_pin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recoverWarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_can_use_the_password_to_recover_the_pin_not_vice_versa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signInButton" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/pinTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/crimson_text"
        android:hint="@string/enter_a_pin"
        android:textColorHint="@color/colorPrimaryDark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/pinEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimson_text_semibold"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/confirmPinTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/colorPrimaryDark"
        android:fontFamily="@font/crimson_text"
        android:hint="@string/confirm_pin"
        android:textColorHint="@color/colorPrimaryDark">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signInEmailEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimson_text_semibold"
            android:paddingStart="16dp"
            android:paddingEnd="8dp"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="117dp"
        android:layout_height="33dp"
        android:background="@drawable/bg_button_solid_primary_dark"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/skipButton"
        android:layout_width="117dp"
        android:layout_height="33dp"
        android:background="@drawable/bg_button_outline_primary_dark"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/skip"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>