<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/modelSnitchDeviceName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/device_name"
        app:layout_constraintBottom_toTopOf="@+id/modelSnitchType"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/modelSnitchType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/snitch_type"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelSnitchDeviceName" />

    <TextView
        android:id="@+id/modelSnitchDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:text="@string/date_of_snitch"
        app:layout_constraintBottom_toTopOf="@+id/modelSnitchLL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/modelSnitchLL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="7dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/modelSnitchDate">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:layout_margin="3dp"
            android:src="@drawable/ic_location" />

        <TextView
            android:id="@+id/modelSnitchCo_ordinates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/co_ordinates" />
    </LinearLayout>

    <TextView
        android:id="@+id/modelSnitchDivider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="3dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/modelSnitchLL" />

</android.support.constraint.ConstraintLayout>