<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button_solid_primary">

    <TextView
        android:id="@+id/splashSkipInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/you_could_create_an_account"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/skipDialogCreateAccountButton"
        android:layout_width="173dp"
        android:layout_height="33dp"
        android:layout_margin="14dp"
        android:background="@drawable/bg_button_solid_primary_dark"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashSkipInfo" />

    <Button
        android:id="@+id/skipDialogSkipButton"
        android:layout_width="117dp"
        android:layout_height="33dp"
        android:layout_margin="14dp"
        android:background="@drawable/bg_button_outline_primary_dark"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/nope_skip"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashSkipInfo" />
</android.support.constraint.ConstraintLayout>