<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_button_solid_primary">

    <TextView
        android:id="@+id/splashSkipInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/welcome_back_please_log_in"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInEmailTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:hint="@string/your_password"
        android:textColorHint="@color/colorPrimary"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/skipDialogCreateAccountButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/splashSkipInfo">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signInEmailEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimson_text_semibold"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/skipDialogCreateAccountButton"
        android:layout_width="173dp"
        android:layout_height="33dp"
        android:layout_margin="14dp"
        android:background="@drawable/bg_button_solid_primary_dark"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</android.support.constraint.ConstraintLayout>