<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="63dp"
        android:layout_height="63dp"
        android:src="@mipmap/ic_splash"
        app:layout_constraintBottom_toTopOf="@+id/signInEmailTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="14dp"
        android:fontFamily="@font/crimson_text_italic"
        android:text="@string/type_in_your_email_to_get_started"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/signInEmailTIL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signInEmailTIL"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="217dp"
        android:layout_height="wrap_content"
        android:hint="@string/youremail_smth_smth"
        android:textColorHint="@color/colorPrimary"
        app:errorEnabled="true"
        app:hintEnabled="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/signInEmailEDT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/crimson_text_semibold"
            android:inputType="textEmailAddress"
            android:singleLine="true"
            android:textAlignment="textStart"
            android:textColor="@color/colorPrimaryDark"
            android:textColorHint="@color/colorPrimary"
            android:textSize="14sp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/contButton"
        android:layout_width="173dp"
        android:layout_height="33dp"
        android:background="@drawable/bg_button_outline_primary_dark"
        android:fontFamily="@font/crimson_text_semibold"
        android:text="@string/continu"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signInEmailTIL" />

</android.support.constraint.ConstraintLayout>